[package]
name = "lora-packet-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lorawan_packet_validator"
path = "src/main.rs"
doc = false

[workspace]
members = [
	"lrwn",
]

[dependencies]
lrwn = { package = "lrwn", path = "lrwn" }
base64 = "0.13.0"
